<resources>
    <string name="app_name">ReportCard</string>
    <string name="action_settings"> action_settings</string>
    <string name="ToyotaLogo">Toyota Logo</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="ForgotPassWord">Forgot Password</string>
    <string name="AttemptsLeft">Attempts Left:</string>
    <string name="NewText">new</string>
    <string name="Slogan">WE AIM 100% PASS</string>
    <string name="UserSite">User Site</string>
</resources>
